add javassist to module-info and add java9-command-line.sh