@@ -5,10 +5,10 @@ set -e
 PROJECT_DIR=$(dirname "$0")
 cd ${PROJECT_DIR}/.. 
 
+
+echo '$ rm -rf mytarget/ && mkdir -p mytarget/classes && mkdir mytarget/lib-direct'
 echo '###############################################################'
-echo '$ rm -rf mytarget/ && mkdir -p mytarget/classes'
-echo '###############################################################'
-rm -rf mytarget/ && mkdir -p mytarget/classes
+rm -rf mytarget/ && mkdir -p mytarget/classes && mkdir mytarget/lib-direct
 
 
 echo '###############################################################'
@@ -18,10 +18,23 @@ mvn dependency:copy-dependencies -DoutputDirectory=mytarget/lib
 
 
 echo '###############################################################'
-echo '$ javac -d mytarget/classes -cp "mytarget/lib/*" $(find src/main/ -name "*.java")'
+echo '$ mv mytarget/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar \
+           mytarget/lib/hibernate-core-5.0.1.Final.jar \
+	   mytarget/lib/slf4j-api-1.7.21.jar \
+	   mytarget/lib/javassist-3.18.1-GA.jar \
+	   mytarget/lib-direct'
 echo '###############################################################'
-javac -d mytarget/classes -cp "mytarget/lib/*" $(find src/main/ -name "*.java")
+mv mytarget/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar \
+   mytarget/lib/hibernate-core-5.0.1.Final.jar \
+   mytarget/lib/slf4j-api-1.7.21.jar \
+   mytarget/lib/javassist-3.18.1-GA.jar \
+   mytarget/lib-direct
 
+
+echo '###############################################################'
+echo '$ javac -d mytarget/classes/ -p mytarget/lib -cp mytarget/lib-direct $(find src/main/java -name "*.java")'
+echo '###############################################################'
+javac -d mytarget/classes/ -p mytarget/lib-direct -cp mytarget/lib $(find src/main/java -name "*.java")
 
 echo '###############################################################'
 echo '$ cp src/main/resources/* mytarget/classes/'
@@ -32,13 +45,18 @@ cp src/main/resources/* mytarget/classes/
 echo '###############################################################'
 echo '$ jar cf mytarget/cqrs.jar -C mytarget/classes .'
 echo '###############################################################'
-jar cf mytarget/cqrs.jar -C mytarget/classes .
-
+jar cf mytarget/cqrs.jar -C mytarget/classes/ .
 
 echo '###############################################################'
-echo '$ java -cp "mytarget/lib/*":mytarget/cqrs.jar com.iluwatar.cqrs.app.App'
+echo '$ java --add-modules java.sql \
+             --add-opens java.base/java.lang=javassist \
+	     -p mytarget/lib-direct:mytarget/cqrs.jar \
+	     -cp "mytarget/lib/*" \
+	     -m com.iluwatar.cqrs/com.iluwatar.cqrs.app.App'
 echo '###############################################################'
-java --add-modules java.xml.bind -cp "mytarget/lib/*":mytarget/cqrs.jar com.iluwatar.cqrs.app.App
+java --add-modules java.sql \
+     --add-opens java.base/java.lang=javassist \
+     -p mytarget/lib-direct:mytarget/cqrs.jar \
+     -cp "mytarget/lib/*" \
+     -m com.iluwatar.cqrs/com.iluwatar.cqrs.app.App
 
-# If you didn't add the jaxb to the dependencies you can use --add-modules to add java.xml.bind to the root modules: 
-#java --add-modules java.xml.bind -cp "mytarget/lib/*":mytarget/cqrs.jar com.iluwatar.cqrs.app.App
